testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail06.stderr
[1 of 3] Compiling OverloadedRecFldsFail06_A ( OverloadedRecFldsFail06_A.hs, OverloadedRecFldsFail06_A.o )

OverloadedRecFldsFail06_A.hs:9:15: warning: [-Wunused-top-binds (in -Wextra, -Wunused-binds)]
    Defined but not used: data constructor ‘MkUnused’

OverloadedRecFldsFail06_A.hs:9:42: warning: [-Wunused-top-binds (in -Wextra, -Wunused-binds)]
    Defined but not used: ‘unused2’

OverloadedRecFldsFail06_A.hs:9:59: warning: [-Wunused-top-binds (in -Wextra, -Wunused-binds)]
    Defined but not used: ‘used_locally’
[2 of 3] Compiling Main             ( overloadedrecfldsfail06.hs, overloadedrecfldsfail06.o )

overloadedrecfldsfail06.hs:15:18: error:
    • Record update is ambiguous, and requires a type signature
    • In the first argument of ‘print’, namely ‘(u {x = True} :: U)’
      In a stmt of a 'do' block: print (u {x = True} :: U)
      In the expression:
        do print (u {x = True} :: U)
           print ((\ MkV2 {y = y} -> y) v)
           print (N.x v)
           print (getY (v {P.x = 3}))
